--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -11,8 +11,10 @@
   <div class="panel-body">
 
     <div class="list-group list-issues">
-      <div class="list-group-item issue issue-new" aria-hidden="true" *ngFor="let issue of backlogIssues" (click)="showDetails(issue)">{{issue.title}}
+      <div class="list-group-item issue issue-new" aria-hidden="true" *ngFor="let issue of backlogIssues" (click)="showDetails(issue)">
+        {{issue.title}}
         <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
+        <span *ngIf="issue.assignee" class="fa fa-user">{{issue.assignee}}</span>
 
         <input [(ngModel)]="selected[issue.number]"
                [typeahead]="milestones"
@@ -36,7 +38,9 @@
   </div>
   <div class="panel-body">
     <div class="list-group list-issues">
-      <div class="list-group-item issue issue-new" *ngFor="let issue of milestonesIssue[mile.number]" (click)="showDetails(issue)">{{issue.title}}
+      <div class="list-group-item issue issue-new" *ngFor="let issue of milestonesIssue[mile.number]" (click)="showDetails(issue)">
+        {{issue.title}}
+        <span *ngIf="issue.assignee" class="fa fa-user"></span>
         <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
       </div>
     </div>
