chore(content): better example content

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-md-4 text-center">
         You like to organize your issues using GitHub but would like to easily stick to a Scrum based method?
-        We will support you by enhancing GitHub by adding advanced features which implement a Scrum oriented view your GitHub issues!
+        We will support you by enhancing GitHub "through" adding advanced features which implement a Scrum oriented view your GitHub issues!
       </div>
       <div class="col-md-4 text-center">
         Using Scrummingbird it is as easy to define your sprints and make use of a backlog where you can organize issues of you
