--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -45,10 +45,10 @@
             <div *ngFor="let comment of selectedIssueComments | async" class="comment">
               <div class="row row-eq-height">
                 <div class="col-md-2 center-block profile">
-                  <img [src]="comment.user.avatar_url" width="48px">
+                  <img [src]="comment.user.avatar_url" class="img-circle" width="48px">
                 </div>
                 <div class="well col-md-10">
-                  asd
+                  <div [innerHTML]="comment.body"></div>
                   <div class="date">
                     commented at {{comment.updatedAt | date }}
                   </div>
