fix(milestones): fix bug which causes due dates not to be persist

--- a/src/app/components/milestone-create/milestone-create.component.html
+++ b/src/app/components/milestone-create/milestone-create.component.html
@@ -17,7 +17,7 @@
 
   <div class="form-group">
     <label>Due Date</label>
-    <input [(ngModel)]="milestone.dueDate" type="date" class="form-control" placeholder="Due Date">
+    <input [(ngModel)]="milestone.due_on" type="date" class="form-control" placeholder="Due Date">
   </div>
 
   <button (click)="create(milestone)" type="submit" class="btn btn-default">create</button>
