--- a/src/app/components/issue-details-panel/issue-details-panel.component.html
+++ b/src/app/components/issue-details-panel/issue-details-panel.component.html
@@ -5,6 +5,21 @@
     </h3>
   </div>
   <div class="panel-body">
+    <div>
+      <div class="btn-group btn-group-xs" role="toolbar">
+        <a class="btn btn-default">0d</a>
+        <a class="btn btn-default">1/2d</a>
+        <a class="btn btn-default">1d</a>
+        <a class="btn btn-default">2d</a>
+        <a class="btn btn-default">3d</a>
+        <a class="btn btn-default">5d</a>
+        <a class="btn btn-default">8d</a>
+        <a class="btn btn-default">13d</a>
+        <a class="btn btn-default">20d</a>
+        <a class="btn btn-default">?</a>
+      </div>
+    </div>
+
     {{issue.state}}
     {{issue.description}}
     {{issue | json}}
