--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -16,7 +16,7 @@
            (click)="showDetails(issue)">
         {{issue.title}}
         <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
-        <span *ngIf="issue.assignee" class="fa fa-user">{{issue.assignee}}</span>
+        <span *ngIf="issue.assignee" [tooltip]="issue.assignee" class="fa fa-user"></span>
 
         <div class="form-group pull-right">
           <input [(ngModel)]="selected[issue.number]"
@@ -45,7 +45,7 @@
       <div class="list-group-item issue issue-new" *ngFor="let issue of milestonesIssue[mile.number]"
            (click)="showDetails(issue)">
         {{issue.title}}
-        <span *ngIf="issue.assignee" class="fa fa-user"></span>
+        <span *ngIf="issue.assignee" [tooltip]="issue.assignee" class="fa fa-user"></span>
         <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
       </div>
     </div>
