chore(label): add required labels

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,8 +10,8 @@
         We will support you by enhancing GitHub "through" adding advanced features which implement a Scrum oriented view your GitHub issues!
       </div>
       <div class="col-md-4 text-center">
-        Using Scrummingbird it is as easy to define your sprints and make use of a backlog where you can organize issues of you
-        and of users of your library or project as well!
+        With using Scrummingbird you can easily define your sprints and make use of a backlog where you can
+        organize issues of you and of users of your library or project as well!
       </div>
       <div class="col-md-4 text-center">
         Login now to enhance your projects by the power of Scrum and start your Scrummingbird journey today!
