--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -40,7 +40,7 @@
         </div>
 
         <accordion *ngIf="selectedIssue.commentCount > 0" class="comments">
-          <accordion-group heading="Comments" (click)="loadComments(selectedIssue)" [isOpen]="test">
+          <accordion-group heading="Comments" [isOpen]="test">
 
             <div *ngFor="let comment of selectedIssueComments | async" class="comment">
               <div class="row row-eq-height">
@@ -54,6 +54,13 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <hr>
+            <div class="col-md-10">
+              <input type="text" class="form-control" [(ngModel)]="createCommentMsg" placeholder="enter comment">
+            </div>
+            <div class="col-md-2">
+              <input class="btn btn-primary btn-sm" (click)="createComment(selectedIssue, createCommentMsg)" type="button" value="send">
             </div>
           </accordion-group>
         </accordion>
