--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -12,20 +12,28 @@
   <div class="panel-body">
 
     <div class="list-group list-issues">
-      <div class="list-group-item issue issue-new" aria-hidden="true" *ngFor="let issue of backlogIssues"
-           (click)="showDetails(issue)">
+      <div class="list-group-item issue" [ngClass]="{'issue-new': issue.state === 'open', 'issue-assigned': issue.assignee !== '', 'issue-done': issue.state === 'done'}" aria-hidden="true" *ngFor="let issue of backlogIssues" (click)="showDetails(issue)">
         {{issue.title}}
-        <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
-        <img *ngIf="issue.assigneeUrl"  [tooltip]="issue.assignee"  [src]="issue.assigneeUrl" style="max-height: 36px">
+        <span class="pull-right">
+          <div class="row">
+            <div class="col-md-4">
+              <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
+              <img *ngIf="issue.assigneeUrl" [tooltip]="issue.assignee"  [src]="issue.assigneeUrl" style="max-height: 36px">
+              &nbsp;
+            </div>
+            <div class="col-md-8">
+              <div class="form-group">
+                <input [(ngModel)]="selected[issue.number]"
+                       [typeahead]="milestones"
+                       (typeaheadOnSelect)="typeaheadOnSelect($event, issue.number)"
+                       [typeaheadOptionField]="'title'"
+                       placeholder="Assign to milestone..."
+                       class="form-control input-sm">
+              </div>
+            </div>
+          </div>
 
-        <div class="form-group pull-right">
-          <input [(ngModel)]="selected[issue.number]"
-                 [typeahead]="milestones"
-                 (typeaheadOnSelect)="typeaheadOnSelect($event, issue.number)"
-                 [typeaheadOptionField]="'title'"
-                 placeholder="Assign to milestone..."
-                 class="form-control input-sm">
-        </div>
+        </span>
       </div>
     </div>
 
@@ -42,22 +50,28 @@
   </div>
   <div class="panel-body">
     <div class="list-group list-issues">
-      <div class="list-group-item issue issue-new" *ngFor="let issue of milestonesIssue[mile.number]"
-           (click)="showDetails(issue)">
+      <div class="list-group-item issue" *ngFor="let issue of milestonesIssue[mile.number]" [ngClass]="{'issue-new': issue.state === 'open', 'issue-assigned': issue.assignee !== '', 'issue-done': issue.state === 'done'}" (click)="showDetails(issue)">
         {{issue.title}}
 
-       <img *ngIf="issue.assigneeUrl"  [tooltip]="issue.assignee"  [src]="issue.assigneeUrl" style="max-height: 36px">
-        <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
-
-        <div class="form-group pull-right">
-          <input [(ngModel)]="selectedUser[issue.number]"
-                 [typeahead]="users"
-                 (typeaheadOnSelect)="typeaheadOnSelectUser($event, issue.number)"
-                 [typeaheadOptionField]="'name'"
-                 placeholder="Assign User"
-                 class="form-control input-sm">
-        </div>
-
+        <span class="pull-right">
+          <div class="row">
+            <div class="col-md-4">
+              <span class="label label-info" *ngFor="let label of issue.labels">{{label.name}}</span>
+              <img *ngIf="issue.assigneeUrl" [tooltip]="issue.assignee"  [src]="issue.assigneeUrl" style="max-height: 36px">
+              &nbsp;
+            </div>
+            <div class="col-md-8">
+              <div class="form-group">
+                <input [(ngModel)]="selected[issue.number]"
+                       [typeahead]="milestones"
+                       (typeaheadOnSelect)="typeaheadOnSelect($event, issue.number)"
+                       [typeaheadOptionField]="'title'"
+                       placeholder="Assign to milestone..."
+                       class="form-control input-sm">
+              </div>
+            </div>
+          </div>
+        </span>
       </div>
     </div>
 
