--- a/src/app/components/issue-details-panel/issue-details-panel.component.html
+++ b/src/app/components/issue-details-panel/issue-details-panel.component.html
@@ -5,15 +5,24 @@
     </h3>
   </div>
   <div class="panel-body">
-    <div>
+    <div *ngIf="authedUser.username === issue.assignee && issue.state === 'open'">
       <div class="btn-group btn-group-xs" role="toolbar">
         <a class="btn btn-default" (click)="setGuess(issue, guess)" *ngFor="let guess of guesses">{{guess.name}}</a>
       </div>
+      <a (click)="closeIssue(issue)" class="btn btn-success btn-xs pull-right">
+        Close <i class="fa fa-check"></i>
+      </a>
+      <hr>
     </div>
+    <img *ngIf="issue.assigneeUrl" [src]="issue.assigneeUrl" class="img-circle" style="max-height: 64px">
+    <img *ngIf="!issue.assigneeUrl" src="/img/identicon.png" class="img-circle" style="max-height: 64px">
 
-    <img [src]="issue.assigneeUrl" style="max-height: 64px"><span class="pull-right"><h2>State: {{issue.state}}</h2></span>
-    <p>{{issue.body}}</p>
-    <span></span>
+    <span class="pull-right"><h2>State: {{issue.state}}</h2></span>
+
+    <div *ngIf="issue.body">
+      <hr>
+      <p>{{issue.body}}</p>
+    </div>
   </div>
 </div>
 
