--- a/src/app/components/milestone-list/milestone-list.component.html
+++ b/src/app/components/milestone-list/milestone-list.component.html
@@ -46,6 +46,12 @@
       {{mile.title}}
       <i class="fa fa-question-circle-o" aria-hidden="true" *ngIf="mile.title" [tooltip]="mile.description"></i>
       <span class="badge pull-right">Already Closed: {{mile.closedIssues}} / {{mile.closedIssues + mile.openIssues}}</span>
+      <div class="pull-right timeToGo">
+        <i class="fa  fa-clock-o" aria-hidden="true"></i>
+        {{mile.timeCount}}d
+      </div>
+
+
     </h3>
   </div>
   <div class="panel-body">
