fix(myTask): removes start button from in progress issues

--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -28,9 +28,7 @@
                     </div>
                     <app-comments [issue]="issue"></app-comments>
                     <div class="btn-group" role="group" aria-label="...">
-                      <button type="button" class="btn btn-xs btn-success" (click)="start(selectedIssue)">start</button>
-                      <button type="button" class="btn btn-xs btn-info" (click)="unassign(selectedIssue)">unassign
-                      </button>
+                      <button type="button" class="btn btn-xs btn-info" (click)="unassign(selectedIssue)">unassign</button>
                       <button type="button" class="btn btn-xs btn-danger" (click)="close(selectedIssue)">close</button>
                     </div>
                   </accordion-group>
