--- a/src/app/components/repository/repository.component.html
+++ b/src/app/components/repository/repository.component.html
@@ -1,13 +1,17 @@
 <div class="row">
   <div class="col-md-8">
     <h2>List of your repositories</h2>
+    <div class="input-group">
+      <input class="form-control" [value]="filterValue" (keyup)="onKey($event)" placeholder="Filter repositories..."/>
+      <div class="input-group-addon"><i class="glyphicon glyphicon-filter"></i></div>
+    </div>
+    <hr>
     <div class="list-group">
-      <p><input [value]="filterValue" (keyup)="onKey($event)" placeholder="Search"/></p>
-      <a [routerLink]="['/repositories/' + repo.ownerName + '/' + repo.name]" href="#" class="list-group-item" *ngFor="let repo of repositories | orderBy: ['!open_issues'] | filterBy: [filterValue] | async">
-        <span class="badge">{{repo.open_issues}}</span>
-        <h4 class="list-group-item-heading">{{repo.name}}</h4>
-        <p class="list-group-item-text">
-        </p>
+      <a [routerLink]="['/repositories/' + repo.ownerName + '/' + repo.name]"
+         href="#" class="list-group-item"
+         *ngFor="let repo of repositories | orderBy: ['!open_issues'] | filterBy: [filterValue] | async">
+        <strong>{{repo.name}}</strong>
+        <i class="fa fa-chevron-right pull-right"></i>
       </a>
     </div>
   </div>
