--- a/src/app/components/my-tasks/my-tasks.component.html
+++ b/src/app/components/my-tasks/my-tasks.component.html
@@ -1,68 +1,25 @@
 <div class="row">
-  <div class="col-md-12">
-    <div class="panel panel-default panel-sprint">
-      <div class="panel-heading">
-        <h3 class="panel-title">
-          Kanban Board
-          <input [value]="filterValue" class="pull-right input-xs" (keyup)="onKey($event)" placeholder="Search"/>
-        </h3>
+  <div class="col-md-8">
+    <div class="row">
+      <div class="col-md-6">
+        <h2 class="header">Open / WiP</h2>
+        <div class="tickets">
+          <issue-list-item *ngFor="let issue of myIssues | filterBy: [filterValue] | filterByAttribute: [todo] | async"
+            [issue]="issue" (issueSelected)="issueSelected($event)">
+          </issue-list-item>
+        </div>
       </div>
-
-      <div class="panel-body">
-        <div class="col-md-6">
-          <div class="panel panel-default panel-sprint">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-                Work in Progress
-              </h4>
-            </div>
-            <div class="panel-body">
-              <div class="list-group list-issues">
-                <accordion class="list-group-item issue issue-new" *ngFor="let issue of myIssues
-                  | filterBy: [filterValue] | filterByAttribute: [todo] | async" (click)="selectIssue(issue)"
-                           [ngClass]="{'active': selectedIssue && (issue.id == selectedIssue.id)}">
-                  <h4 class="list-group-item-heading">{{issue.title}}</h4>
-                  <accordion-group heading=" {{issue.repository.name}}" [isOpen]="false">
-                    <div class="well">
-                      {{issue.body}}
-                    </div>
-                    <app-comments [issue]="issue"></app-comments>
-                    <div class="btn-group" role="group" aria-label="...">
-                      <button type="button" class="btn btn-xs btn-info" (click)="unassign(selectedIssue)">unassign</button>
-                      <button type="button" class="btn btn-xs btn-danger" (click)="close(selectedIssue)">close</button>
-                    </div>
-                  </accordion-group>
-                </accordion>
-              </div>
-            </div>
-          </div>
+      <div class="col-md-6">
+        <h2 class="header">Done</h2>
+        <div class="tickets">
+          <issue-list-item *ngFor="let issue of myIssues | filterBy: [filterValue] |  filterByAttribute: [closed] | async"
+                           [issue]="issue" (issueSelected)="issueSelected($event)">
+          </issue-list-item>
         </div>
-
-        <div class="col-md-6">
-          <div class="panel panel-default panel-sprint">
-            <div class="panel-heading">
-              <h4 class="panel-title">
-                Done
-              </h4>
-            </div>
-
-            <div class="panel-body">
-              <div class="list-group list-issues">
-                <accordion class="list-group-item issue issue-done" *ngFor="let issue of myIssues |
-                  filterBy: [filterValue] |  filterByAttribute: [closed] | async">
-                  <h4 class="list-group-item-heading">{{issue.title}}</h4>
-                  <accordion-group heading=" {{issue.repository.name}}" [isOpen]="false">
-                    <div class="well">
-                      {{issue.body}}
-                    </div>
-                    <app-comments [issue]="issue"></app-comments>
-                  </accordion-group>
-                </accordion>
-
-              </div>
-            </div>
-          </div>
-        </div>
-
       </div>
     </div>
+  </div>
+  <div class="col-md-4 col-details">
+    <app-issue-details-panel [issue]="selectedIssue"></app-issue-details-panel>
+  </div>
+</div>
